--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flyonui": "^1.1.0",
     "motion": "^11.11.17",
     "next": "15.0.3",
+    "openai": "^4.73.1",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
