--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.0.3",
     "openai": "^4.73.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "sonner": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
