--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.3",
     "flyonui": "^1.1.0",
     "motion": "^11.11.17",
     "next": "15.0.3",
